--- a/libfwevt.spec.in
+++ b/libfwevt.spec.in
@@ -1,17 +1,17 @@
 Name: libfwevt
 Version: @VERSION@
 Release: 1
-Summary: Library to support the Object Linking and Embedding (OLE) data types
+Summary: Library to support the Windows XML Event Log (EVTX) data types
 Group: System Environment/Libraries
 License: LGPL
 Source: %{name}-%{version}.tar.gz
-URL: https://github.com/libyal/libfwevt/
+URL: https://github.com/libyal/libfwevt
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @libfwevt_spec_requires@ @ax_libcdata_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcnotify_spec_requires@ @ax_libcthreads_spec_requires@ @ax_libfdatetime_spec_requires@ @ax_libfguid_spec_requires@ @ax_libfvalue_spec_requires@ @ax_libuna_spec_requires@
 @libfwevt_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcthreads_spec_build_requires@ @ax_libfdatetime_spec_build_requires@ @ax_libfguid_spec_build_requires@ @ax_libfvalue_spec_build_requires@ @ax_libuna_spec_build_requires@
 
 %description
-libfwevt is a library to support the Object Linking and Embedding (OLE) data types
+Library to support the Windows XML Event Log (EVTX) data types
 
 %package devel
 Summary: Header files and libraries for developing applications for libfwevt
