--- a/.codecov.yml
+++ b/.codecov.yml
@@ -7,4 +7,12 @@ coverage:
     patch: true
     changes: false
   ignore:
+    - "libcdata/*"
+    - "libcerror/*"
+    - "libcnotify/*"
+    - "libcthreads/*"
+    - "libfdatetime/*"
+    - "libfguid/*"
+    - "libfvalue/*"
+    - "libuna/*"
     - "tests/*"
