--- a/libfwevt.ini
+++ b/libfwevt.ini
@@ -1,4 +1,5 @@
 [project]
+description: "libfwevt is a library for Windows XML Event Log (EVTX) data types."
 name: "libfwevt"
 status: "experimental"
 year_of_creation: "2011"
