--- a/libfwevt/Makefile.am
+++ b/libfwevt/Makefile.am
@@ -9,7 +9,8 @@ AM_CPPFLAGS = \
 	@LIBFGUID_CPPFLAGS@ \
 	@LIBFVALUE_CPPFLAGS@ \
 	@LIBUNA_CPPFLAGS@ \
-	@PTHREAD_CPPFLAGS@
+	@PTHREAD_CPPFLAGS@ \
+	@LIBFWEVT_DLL_EXPORT@
 
 lib_LTLIBRARIES = libfwevt.la
 
