Worked on tests

--- a/msvscpp/fwevt_test_xml_tag/fwevt_test_xml_tag.vcproj
+++ b/msvscpp/fwevt_test_xml_tag/fwevt_test_xml_tag.vcproj
@@ -194,6 +194,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\tests\fwevt_test_libfvalue.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\tests\fwevt_test_libfwevt.h"
 				>
 			</File>
