--- a/msvscpp/fwevt_test_xml_tag/fwevt_test_xml_tag.vcproj
+++ b/msvscpp/fwevt_test_xml_tag/fwevt_test_xml_tag.vcproj
@@ -202,6 +202,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\tests\fwevt_test_libuna.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\tests\fwevt_test_macros.h"
 				>
 			</File>
