--- a/libfwevt.spec.in
+++ b/libfwevt.spec.in
@@ -48,7 +48,7 @@ rm -rf %{buildroot}
 %files -n libfwevt-devel
 %defattr(644,root,root,755)
 %license COPYING
-%doc AUTHORS README ChangeLog
+%doc AUTHORS README
 %{_libdir}/*.a
 %{_libdir}/*.la
 %{_libdir}/*.so
