--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,8 +43,6 @@ environment:
   - TARGET: cygwin-gcc
     BUILD_ENVIRONMENT: cygwin
     CONFIGURE_OPTIONS: ""
-    CFLAGS: "--coverage"
-    LDFLAGS: "--coverage"
   - TARGET: cygwin-gcc-no-optimization
     BUILD_ENVIRONMENT: cygwin
     CONFIGURE_OPTIONS: "--enable-shared=no"
@@ -54,8 +52,6 @@ environment:
   - TARGET: cygwin64-gcc
     BUILD_ENVIRONMENT: cygwin64
     CONFIGURE_OPTIONS: ""
-    CFLAGS: "--coverage"
-    LDFLAGS: "--coverage"
   - TARGET: cygwin64-gcc-no-optimization
     BUILD_ENVIRONMENT: cygwin64
     CONFIGURE_OPTIONS: "--enable-shared=no"
@@ -65,8 +61,6 @@ environment:
   - TARGET: mingw-gcc
     BUILD_ENVIRONMENT: mingw
     CONFIGURE_OPTIONS: ""
-    CFLAGS: "--coverage"
-    LDFLAGS: "--coverage"
   - TARGET: mingw-gcc-no-optimization
     BUILD_ENVIRONMENT: mingw
     CONFIGURE_OPTIONS: "--enable-shared=no"
@@ -76,8 +70,6 @@ environment:
   - TARGET: mingw-w64-gcc
     BUILD_ENVIRONMENT: mingw-w64
     CONFIGURE_OPTIONS: ""
-    CFLAGS: "--coverage"
-    LDFLAGS: "--coverage"
   - TARGET: mingw-w64-gcc-no-optimization
     BUILD_ENVIRONMENT: mingw-w64
     CONFIGURE_OPTIONS: "--enable-shared=no"
@@ -138,5 +130,5 @@ test_script:
 after_test:
 - cmd: if [%TARGET%]==[mingw-gcc-no-optimization] (
     copy C:\projects\codecov-bash\codecov C:\MinGW\msys\1.0\home\appveyor\libfwevt\codecov.sh &&
-    C:\MinGW\msys\1.0\bin\bash -e -l -c "cd libfwevt && chmod a+x ./codecov.sh && sed -i 's/-execdir /-exec /' ./codecov.sh && ./codecov.sh -n ${TARGET} -y .codecov.yml" )
+    C:\MinGW\msys\1.0\bin\bash -e -l -c "cd libfwevt && chmod a+x ./codecov.sh && ./codecov.sh -n ${TARGET}" )
 
