--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfwevt],
- [20200709],
+ [20200827],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -87,32 +87,11 @@ AX_LIBFVALUE_CHECK_ENABLE
 dnl Check if libfwevt required headers and functions are available
 AX_LIBFWEVT_CHECK_LOCAL
 
+dnl Check if DLL support is needed
+AX_LIBFWEVT_CHECK_DLL_SUPPORT
+
 dnl Check if tests required headers and functions are available
 AX_TESTS_CHECK_LOCAL
-
-dnl Check if DLL support is needed
-AS_IF(
- [test "x$enable_shared" = xyes],
- [AS_CASE(
-  [$host],
-  [*cygwin* | *mingw* | *msys*],
-  [AC_DEFINE(
-   [HAVE_DLLMAIN],
-   [1],
-   [Define to 1 to enable the DllMain function.])
-  AC_SUBST(
-   [HAVE_DLLMAIN],
-   [1])
-
-  AC_SUBST(
-   [LIBFWEVT_DLL_EXPORT],
-   ["-DLIBFWEVT_DLL_EXPORT"])
-
-  AC_SUBST(
-   [LIBFWEVT_DLL_IMPORT],
-   ["-DLIBFWEVT_DLL_IMPORT"])
-  ])
- ])
 
 dnl Set additional compiler flags
 CFLAGS="$CFLAGS -Wall";
