--- a/libfwevt.spec.in
+++ b/libfwevt.spec.in
@@ -3,7 +3,7 @@ Version: @VERSION@
 Release: 1
 Summary: Library to support the Windows XML Event Log (EVTX) data types
 Group: System Environment/Libraries
-License: LGPL
+License: LGPLv3+
 Source: %{name}-%{version}.tar.gz
 URL: https://github.com/libyal/libfwevt
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
