--- a/libfwevt/libfwevt_definitions.h.in
+++ b/libfwevt/libfwevt_definitions.h.in
@@ -155,7 +155,9 @@ enum LIBFWEVT_XML_TEMPLATE_VALUE_FLAGS
 	LIBFWEVT_XML_TEMPLATE_VALUE_FLAG_IS_DEFINITION			= 0x01
 };
 
-#endif
+#endif /* !defined( HAVE_LOCAL_LIBFWEVT ) */
 
-#endif
+#define LIBFWEVT_XML_DOCUMENT_RECURSION_DEPTH				256
+
+#endif /* !defined( LIBFWEVT_INTERNAL_DEFINITIONS_H ) */
 
