--- a/libfwevt/libfwevt_definitions.h.in
+++ b/libfwevt/libfwevt_definitions.h.in
@@ -157,6 +157,7 @@ enum LIBFWEVT_XML_TEMPLATE_VALUE_FLAGS
 
 #endif /* !defined( HAVE_LOCAL_LIBFWEVT ) */
 
+#define LIBFWEVT_XML_DOCUMENT_ELEMENT_RECURSION_DEPTH			256
 #define LIBFWEVT_XML_DOCUMENT_TEMPLATE_INSTANCE_RECURSION_DEPTH		16
 
 #endif /* !defined( LIBFWEVT_INTERNAL_DEFINITIONS_H ) */
