Worked on Python bindings

--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,7 @@ stamp-h[1-9]
 /libfwevt.spec
 /libfwevt/libfwevt.rc
 /libfwevt/libfwevt_definitions.h
+/pyfwevt-python[23]/*.[ch]
 /tests/*.exe
 /tests/fwevt_test_channel
 /tests/fwevt_test_error
