--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,9 @@ SUBDIRS = \
 	libfguid \
 	libfvalue \
 	libfwevt \
+	pyfwevt \
+	pyfwevt-python2 \
+	pyfwevt-python3 \
 	po \
 	manuals \
 	tests \
@@ -27,6 +30,8 @@ DPKG_FILES = \
 	dpkg/rules \
 	dpkg/libfwevt-dev.install \
 	dpkg/libfwevt.install \
+	dpkg/libfwevt-python.install \
+	dpkg/libfwevt-python3.install \
 	dpkg/source/format
 
 GETTEXT_FILES = \
@@ -36,6 +41,9 @@ GETTEXT_FILES = \
 PKGCONFIG_FILES = \
 	libfwevt.pc.in
 
+SETUP_PY_FILES = \
+	setup.py
+
 SPEC_FILES = \
 	libfwevt.spec \
 	libfwevt.spec.in
@@ -44,6 +52,7 @@ EXTRA_DIST = \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
+	$(SETUP_PY_FILES) \
 	$(SPEC_FILES)
 
 MAINTAINERCLEANFILES = \
