--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,11 +51,35 @@ environment:
     APPVEYOR_BUILD_WORKER_IMAGE: macos
     HOMEBREW_NO_INSTALL_CLEANUP: 1
     CONFIGURE_OPTIONS: ""
+  - TARGET: macos-x64-gcc-python
+    BUILD_ENVIRONMENT: xcode
+    APPVEYOR_BUILD_WORKER_IMAGE: macos
+    HOMEBREW_NO_INSTALL_CLEANUP: 1
+    CONFIGURE_OPTIONS: "--enable-python"
   - TARGET: macos-pkgbuild
     BUILD_ENVIRONMENT: xcode
     APPVEYOR_BUILD_WORKER_IMAGE: macos
     HOMEBREW_NO_INSTALL_CLEANUP: 1
-    CONFIGURE_OPTIONS: "--disable-dependency-tracking --prefix=/usr/local --with-pyprefix"
+    CONFIGURE_OPTIONS: "--disable-dependency-tracking --prefix=/usr/local --enable-python --with-pyprefix"
+  - TARGET: python27
+    BUILD_ENVIRONMENT: python
+    PYTHON: "C:\\Python27\\python.exe"
+  - TARGET: python27-x64
+    BUILD_ENVIRONMENT: python
+    PYTHON: "C:\\Python27-x64\\python.exe"
+  - TARGET: python310
+    BUILD_ENVIRONMENT: python
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    PYTHON: "C:\\Python310\\python.exe"
+  - TARGET: python310-x64
+    BUILD_ENVIRONMENT: python
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    PYTHON: "C:\\Python310-x64\\python.exe"
+  - TARGET: python39-x64
+    BUILD_ENVIRONMENT: python
+    APPVEYOR_BUILD_WORKER_IMAGE: macos
+    PYTHON: "/usr/local/opt/python@3.9/bin/python3"
+    HOMEBREW_NO_INSTALL_CLEANUP: 1
   - TARGET: cygwin-gcc
     BUILD_ENVIRONMENT: cygwin
     CONFIGURE_OPTIONS: ""
@@ -65,6 +89,17 @@ environment:
     CFLAGS: "--coverage -O0"
     CPPFLAGS: "-DOPTIMIZATION_DISABLED"
     LDFLAGS: "--coverage"
+  - TARGET: cygwin-gcc-python
+    BUILD_ENVIRONMENT: cygwin
+    CONFIGURE_OPTIONS: "--enable-python"
+  - TARGET: cygwin-gcc-python2
+    BUILD_ENVIRONMENT: cygwin
+    CONFIGURE_OPTIONS: "--enable-python2"
+    PYTHON_VERSION: 2
+  - TARGET: cygwin-gcc-python3
+    BUILD_ENVIRONMENT: cygwin
+    CONFIGURE_OPTIONS: "--enable-python3"
+    PYTHON_VERSION: 3
   - TARGET: cygwin64-gcc
     BUILD_ENVIRONMENT: cygwin64
     CONFIGURE_OPTIONS: ""
@@ -74,6 +109,17 @@ environment:
     CFLAGS: "--coverage -O0"
     CPPFLAGS: "-DOPTIMIZATION_DISABLED"
     LDFLAGS: "--coverage"
+  - TARGET: cygwin64-gcc-python
+    BUILD_ENVIRONMENT: cygwin64
+    CONFIGURE_OPTIONS: "--enable-python"
+  - TARGET: cygwin64-gcc-python2
+    BUILD_ENVIRONMENT: cygwin64
+    CONFIGURE_OPTIONS: "--enable-python2"
+    PYTHON_VERSION: 2
+  - TARGET: cygwin64-gcc-python3
+    BUILD_ENVIRONMENT: cygwin64
+    CONFIGURE_OPTIONS: "--enable-python3"
+    PYTHON_VERSION: 3
   - TARGET: mingw-gcc
     BUILD_ENVIRONMENT: mingw
     CONFIGURE_OPTIONS: ""
@@ -99,10 +145,13 @@ install:
     git clone https://github.com/libyal/vstools.git ..\vstools )
 - sh: if test ${BUILD_ENVIRONMENT} = "xcode" || test ${BUILD_ENVIRONMENT} = "python"; then brew update -q; fi
 - sh: if test ${BUILD_ENVIRONMENT} = "xcode" || test ${BUILD_ENVIRONMENT} = "python"; then brew install -q gettext gnu-sed || true; fi
+- sh: if test ${BUILD_ENVIRONMENT} = "python"; then brew install -q python3 || true; fi
+- ps: If ($env:BUILD_ENVIRONMENT -eq "python") {
+    Invoke-Expression "${env:PYTHON} -m pip install -U pip setuptools twine wheel" }
 - cmd: if [%BUILD_ENVIRONMENT%]==[cygwin] (
-    C:\cygwin\setup-x86.exe -qgnNdO -l C:\cygwin\var\cache\setup -R c:\cygwin -s http://cygwin.mirror.constant.com -P gettext-devel )
+    C:\cygwin\setup-x86.exe -qgnNdO -l C:\cygwin\var\cache\setup -R c:\cygwin -s http://cygwin.mirror.constant.com -P gettext-devel -P python2-devel -P python3-devel )
 - cmd: if [%BUILD_ENVIRONMENT%]==[cygwin64] (
-    C:\cygwin64\setup-x86_64.exe -qgnNdO -l C:\cygwin64\var\cache\setup -R c:\cygwin64 -s http://cygwin.mirror.constant.com -P gettext-devel )
+    C:\cygwin64\setup-x86_64.exe -qgnNdO -l C:\cygwin64\var\cache\setup -R c:\cygwin64 -s http://cygwin.mirror.constant.com -P gettext-devel -P python2-devel -P python3-devel )
 
 build_script:
 - ps: If ($env:BUILD_ENVIRONMENT -eq "msbuild" -or ($env:BUILD_ENVIRONMENT -eq "python" -and $isWindows)) {
@@ -124,6 +173,9 @@ build_script:
 - ps: If ($env:TARGET -eq "vs2019") {
     .\build.ps1 -VisualStudioVersion 2019 -VSToolsOptions "--extend-with-x64 --no-python-dll --with-dokany" }
 - sh: if test ${BUILD_ENVIRONMENT} = "xcode" || test ${BUILD_ENVIRONMENT} = "python"; then export PATH="/usr/local/opt/gettext/bin:$PATH"; export SED="/usr/local/bin/gsed"; tests/build.sh ${CONFIGURE_OPTIONS}; fi
+- cmd: if [%BUILD_ENVIRONMENT%]==[python] (
+    "%PYTHON%" setup.py bdist_msi bdist_wheel )
+- sh: if test ${BUILD_ENVIRONMENT} = "python"; then ${PYTHON} setup.py bdist_wheel; fi
 - cmd: if [%BUILD_ENVIRONMENT%]==[cygwin] (
     xcopy /i /q /s C:\projects\libfwevt C:\cygwin\home\appveyor\libfwevt &&
     C:\cygwin\bin\bash -e -l -c "cd libfwevt && tests/build.sh ${CONFIGURE_OPTIONS}" )
@@ -156,4 +208,7 @@ after_test:
 - cmd: if [%TARGET%]==[mingw-gcc-no-optimization] (
     copy C:\projects\codecov-bash\codecov C:\MinGW\msys\1.0\home\appveyor\libfwevt\codecov.sh &&
     C:\MinGW\msys\1.0\bin\bash -e -l -c "cd libfwevt && chmod a+x ./codecov.sh && ./codecov.sh -n ${TARGET}" )
+
+artifacts:
+- path: dist\*.whl
 
