--- a/dpkg/control
+++ b/dpkg/control
@@ -1,7 +1,7 @@
 Source: libfwevt
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config
+Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, python-dev, python-setuptools, python3-dev, python3-setuptools
 Standards-Version: 4.1.4
 Section: libs
 Homepage: https://github.com/libyal/libfwevt
@@ -29,4 +29,38 @@ Architecture: any
 Depends: libfwevt (= ${binary:Version}), ${misc:Depends}
 Description: Header files and libraries for developing applications for libfwevt
  Header files and libraries for developing applications for libfwevt.
+
+Package: libfwevt-python
+Section: python
+Architecture: any
+Depends: libfwevt (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Conflicts: python-libfwevt
+Replaces: python-libfwevt
+Suggests: libfwevt-python-dbg
+Description: Python 2 bindings for libfwevt
+ Python 2 bindings for libfwevt.
+
+Package: libfwevt-python-dbg
+Section: debug
+Architecture: any
+Depends: libfwevt-python (= ${binary:Version}), ${misc:Depends}
+Description: Debugging symbols for libfwevt-python
+ Debugging symbols for libfwevt-python.
+
+Package: libfwevt-python3
+Section: python
+Architecture: any
+Depends: libfwevt (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Conflicts: python3-libfwevt
+Replaces: python3-libfwevt
+Suggests: libfwevt-python3-dbg
+Description: Python 3 bindings for libfwevt
+ Python 3 bindings for libfwevt.
+
+Package: libfwevt-python3-dbg
+Section: debug
+Architecture: any
+Depends: libfwevt-python3 (= ${binary:Version}), ${misc:Depends}
+Description: Debugging symbols for libfwevt-python3
+ Debugging symbols for libfwevt-python3.
 
