--- a/dpkg/rules
+++ b/dpkg/rules
@@ -4,20 +4,24 @@
 # Uncomment for debhelper verbose output.
 # export DH_VERBOSE=1
 
+export SKIP_PYTHON_TESTS=1
+
 %:
 	dh $@ --with=autoreconf
 
 .PHONY: override_dh_auto_configure
 override_dh_auto_configure:
-	dh_auto_configure -- CFLAGS="-g"
+	dh_auto_configure -- --enable-python2 --enable-python3 CFLAGS="-g"
 
 .PHONY: override_dh_install
 override_dh_install:
-	dh_install --fail-missing -X.la
+	dh_install --fail-missing -X.la -X/pyfwevt.a
 
 .PHONY: override_dh_strip
 override_dh_strip:
 ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
 	dh_strip -plibfwevt --dbg-package=libfwevt-dbg
+	dh_strip -plibfwevt-python --dbg-package=libfwevt-python-dbg
+	dh_strip -plibfwevt-python3 --dbg-package=libfwevt-python3-dbg
 endif
 
