--- a/ossfuzz/Makefile.am
+++ b/ossfuzz/Makefile.am
@@ -4,7 +4,16 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/common
 
 bin_PROGRAMS = \
+	manifest_fuzzer \
 	xml_document_fuzzer
+
+manifest_fuzzer_SOURCES = \
+	manifest_fuzzer.cc \
+	ossfuzz_libfwevt.h
+
+manifest_fuzzer_LDADD = \
+	@LIB_FUZZING_ENGINE@ \
+	../libfwevt/libfwevt.la
 
 xml_document_fuzzer_SOURCES = \
 	ossfuzz_libfwevt.h \
@@ -22,6 +31,8 @@ distclean: clean
 	/bin/rm -f Makefile
 
 splint:
+	@echo "Running splint on manifest_fuzzer ..."
+	-splint -preproc -redef $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(manifest_fuzzer_SOURCES)
 	@echo "Running splint on xml_document_fuzzer ..."
 	-splint -preproc -redef $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(xml_document_fuzzer_SOURCES)
 
