--- a/pyfwevt/Makefile.am
+++ b/pyfwevt/Makefile.am
@@ -14,8 +14,8 @@ pyfwevt_la_SOURCES = \
 	pyfwevt_integer.c pyfwevt_integer.h \
 	pyfwevt_libcerror.h \
 	pyfwevt_libfwevt.h \
+	pyfwevt_manifest.c pyfwevt_manifest.h \
 	pyfwevt_python.h \
-	pyfwevt_template.c pyfwevt_template.h \
 	pyfwevt_unused.h
 
 pyfwevt_la_LIBADD = \
