Worked on Python bindings and code clean up

--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -288,8 +288,19 @@ int libfwevt_manifest_get_number_of_providers(
 /* Retrieves a specific provider
  * Returns 1 if successful or -1 on error
  */
+LIBFWEVT_DEPRECATED \
 LIBFWEVT_EXTERN \
 int libfwevt_manifest_get_provider(
+     libfwevt_manifest_t *manifest,
+     int provider_index,
+     libfwevt_provider_t **provider,
+     libfwevt_error_t **error );
+
+/* Retrieves a specific provider
+ * Returns 1 if successful or -1 on error
+ */
+LIBFWEVT_EXTERN \
+int libfwevt_manifest_get_provider_by_index(
      libfwevt_manifest_t *manifest,
      int provider_index,
      libfwevt_provider_t **provider,
@@ -374,114 +385,12 @@ int libfwevt_opcode_read(
  * Provider functions
  * ------------------------------------------------------------------------- */
 
-/* Creates a provider
- * Make sure the value channel is referencing, is set to NULL
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_initialize(
-     libfwevt_provider_t **provider,
-     const uint8_t *identifier,
-     size_t identifier_size,
-     libfwevt_error_t **error );
-
 /* Frees a provider
  * Returns 1 if successful or -1 on error
  */
 LIBFWEVT_EXTERN \
 int libfwevt_provider_free(
      libfwevt_provider_t **provider,
-     libfwevt_error_t **error );
-
-/* Reads the provider
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
-     size_t data_offset,
-     libfwevt_error_t **error );
-
-/* Reads the provider channels
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read_channels(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
-     libfwevt_error_t **error );
-
-/* Reads the provider events
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read_events(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
-     libfwevt_error_t **error );
-
-/* Reads the provider keywords
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read_keywords(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
-     libfwevt_error_t **error );
-
-/* Reads the provider levels
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read_levels(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
-     libfwevt_error_t **error );
-
-/* Reads the provider maps
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read_maps(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
-     libfwevt_error_t **error );
-
-/* Reads the provider opcodes
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read_opcodes(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
-     libfwevt_error_t **error );
-
-/* Reads the provider tasks
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read_tasks(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
-     libfwevt_error_t **error );
-
-/* Reads the provider templates
- * Returns 1 if successful or -1 on error
- */
-LIBFWEVT_EXTERN \
-int libfwevt_provider_read_templates(
-     libfwevt_provider_t *provider,
-     const uint8_t *data,
-     size_t data_size,
      libfwevt_error_t **error );
 
 /* Compares the provider with the identifier
