--- a/pyfwevt/Makefile.am
+++ b/pyfwevt/Makefile.am
@@ -15,6 +15,8 @@ pyfwevt_la_SOURCES = \
 	pyfwevt_libcerror.h \
 	pyfwevt_libfwevt.h \
 	pyfwevt_manifest.c pyfwevt_manifest.h \
+	pyfwevt_provider.c pyfwevt_provider.h \
+	pyfwevt_providers.c pyfwevt_providers.h \
 	pyfwevt_python.h \
 	pyfwevt_unused.h
 
