--- a/pyfwevt-python2/Makefile.am
+++ b/pyfwevt-python2/Makefile.am
@@ -16,7 +16,11 @@ am_pyfwevt_la_rpath = -rpath $(pyexecdir2)
 
 BUILT_SOURCES = \
 	pyfwevt.c pyfwevt.h \
+	pyfwevt_channel.c pyfwevt_channel.h \
+	pyfwevt_channels.c pyfwevt_channels.h \
 	pyfwevt_error.c pyfwevt_error.h \
+	pyfwevt_event.c pyfwevt_event.h \
+	pyfwevt_events.c pyfwevt_events.h \
 	pyfwevt_integer.c pyfwevt_integer.h \
 	pyfwevt_libcerror.h \
 	pyfwevt_libfwevt.h \
