--- a/msvscpp/fwevt_test_xml_document/fwevt_test_xml_document.vcproj
+++ b/msvscpp/fwevt_test_xml_document/fwevt_test_xml_document.vcproj
@@ -194,6 +194,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\tests\fwevt_test_libcnotify.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\tests\fwevt_test_libfwevt.h"
 				>
 			</File>
