--- a/libfwevt/libfwevt_definitions.h.in
+++ b/libfwevt/libfwevt_definitions.h.in
@@ -159,6 +159,7 @@ enum LIBFWEVT_XML_TEMPLATE_VALUE_FLAGS
 
 #define LIBFWEVT_XML_DOCUMENT_ELEMENT_RECURSION_DEPTH			256
 #define LIBFWEVT_XML_DOCUMENT_TEMPLATE_INSTANCE_RECURSION_DEPTH		16
+#define LIBFWEVT_XML_DOCUMENT_TEMPLATE_VALUE_ARRAY_RECURSION_DEPTH	64
 
 #endif /* !defined( LIBFWEVT_INTERNAL_DEFINITIONS_H ) */
 
