--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  pypi_token:
+  PYPI_TOKEN:
     secure: VHuZiUWgTqTciKE2nsv/LvgzW1RYojfMXbiEHTPVSOi529zwFBTwlwjaYJGoAE9PcCZvaEWthApNCSGMUbHzQZwjOySEO9YO/AAr17eA/3QKlNXIEjV5jpTPKtWvNMZUP7WhUNk6ua6EYHuxt2I/i3rjB8lv0jZelBPClNng+MfAtcaXzrgzwxEmWGB6NzXGU7jZAZz/tpf8TB1WBHtWsTvhuw8cISx1nEh0ijLqLmpAAa/cB5zz0mnHPVMLtVdRAj39Eeb4wOnpszjaI1/lsQ0FiBAjcZkB7KaSkNuisNo=
   matrix:
   - TARGET: vs2008
@@ -80,7 +80,7 @@ environment:
   - TARGET: python39-x64
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: macos
-    PYTHON: "/usr/local/opt/python@3.9/bin/python3"
+    PYTHON: "/usr/local/opt/python@3.10/bin/python3"
     HOMEBREW_NO_INSTALL_CLEANUP: 1
     CFLAGS: "-I/usr/local/include"
     LDFLAGS: "-L/usr/local/lib"
@@ -219,4 +219,5 @@ artifacts:
 deploy_script:
 - ps: If ($env:APPVEYOR_REPO_TAG -eq "true" -and $isWindows -and $env:BUILD_ENVIRONMENT -eq "python") {
     Invoke-Expression "${env:PYTHON} -m twine upload dist/*.whl --username __token__ --password ${env:PYPI_TOKEN} --skip-existing" }
+- sh: if test ${APPVEYOR_REPO_TAG} = "true" && test ${BUILD_ENVIRONMENT} = "python"; then ${PYTHON} -m twine upload dist/*.whl --username __token__ --password ${PYPI_TOKEN} --skip-existing; fi
 
