--- a/libfwevt.spec.in
+++ b/libfwevt.spec.in
@@ -29,17 +29,6 @@ Requires: libfwevt = %{version}-%{release}
 %description -n libfwevt-devel
 Header files and libraries for developing applications for libfwevt.
 
-%package -n libfwevt-python2
-Obsoletes: libfwevt-python < %{version}
-Provides: libfwevt-python = %{version}
-Summary: Python 2 bindings for libfwevt
-Group: System Environment/Libraries
-Requires: libfwevt = %{version}-%{release} python2
-BuildRequires: python2-devel
-
-%description -n libfwevt-python2
-Python 2 bindings for libfwevt
-
 %package -n libfwevt-python3
 Summary: Python 3 bindings for libfwevt
 Group: System Environment/Libraries
@@ -53,7 +42,7 @@ Python 3 bindings for libfwevt
 %setup -q
 
 %build
-%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python2 --enable-python3
+%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python3
 make %{?_smp_mflags}
 
 %install
@@ -88,14 +77,6 @@ rm -rf %{buildroot}
 %{_libdir}/pkgconfig/libfwevt.pc
 %{_includedir}/*
 %{_mandir}/man3/*
-
-%files -n libfwevt-python2
-%defattr(644,root,root,755)
-%license COPYING COPYING.LESSER
-%doc AUTHORS README
-%{_libdir}/python2*/site-packages/*.a
-%{_libdir}/python2*/site-packages/*.la
-%{_libdir}/python2*/site-packages/*.so
 
 %files -n libfwevt-python3
 %defattr(644,root,root,755)
